--- a/git-øvelse.html
+++ b/git-øvelse.html
@@ -11,5 +11,6 @@
 <h2>Dette er en øvelse til Github
 </h2>
 <p>vi skal sætte dette html ind i Gihub</p>
+	<p>og lave 3 rettelser og commits</p>
 </body>
 </html>
