--- a/git-øvelse.html
+++ b/git-øvelse.html
@@ -12,5 +12,7 @@
 </h2>
 <p>vi skal sætte dette html ind i Gihub</p>
 	<p>og lave 3 rettelser og commits</p>
+	
+	<h3>Det er fredag!</h3>	
 </body>
 </html>
